--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "0.0.3",
   "repository": {
     "type": "git",
-    "url": "http://github.com/thunderace/speculoos.git"
+    "url": "https://github.com/thunderace/speculoos.git"
   },
   "bugs": {
     "url": "http://github.com/k33g/speculoos/issues"
